--- a/erkabiydaalt/app/src/main/AndroidManifest.xml
+++ b/erkabiydaalt/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.Erkabiydaalt"
         tools:targetApi="31">
         <activity
+            android:name=".Female_Workout_Activity"
+            android:exported="false" />
+        <activity
+            android:name=".Male_Workout_Activity"
+            android:exported="false" />
+        <activity
+            android:name=".WorkoutActivity"
+            android:exported="false" />
+        <activity
             android:name=".RegisterActivity"
             android:exported="false" />
         <activity
